--- a/Complete.fxml
+++ b/Complete.fxml
@@ -63,17 +63,17 @@
          </Button>
          <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="238.0" layoutY="281.0" pickOnBounds="true" preserveRatio="true">
             <image>
-               <Image url="@Fruit/star.png" />
+               <Image url="@Result/star.png" />
             </image>
          </ImageView>
          <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="371.0" layoutY="281.0" pickOnBounds="true" preserveRatio="true">
             <image>
-               <Image url="@Fruit/star.png" />
+               <Image url="@Result/star.png" />
             </image>
          </ImageView>
          <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="510.0" layoutY="281.0" pickOnBounds="true" preserveRatio="true">
             <image>
-               <Image url="@Fruit/star.png" />
+               <Image url="@Result/star.png" />
             </image>
          </ImageView>
       </children></AnchorPane>
